--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ p {
     margin-left: 25%;
     margin-right: 25%;
     font-family: Times New Roman, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 table {
@@ -29,4 +29,12 @@ th, td {
 
 th {
     background-color: lightgray;
+}
+
+#recipe {
+    font-size: 16px;
+}
+
+.important {
+    font-weight: bold;
 }
