--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,11 @@ th {
     font-size: 16px;
 }
 
+.header {
+    color: white;
+    background-color: lightgray;
+}
+
 .important {
     font-weight: bold;
 }
